--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -100,7 +100,7 @@
     "10": "Mahsulotlarning keng assortimenti" ,
     "11": "Biz klinikalar va shifoxonalarga bitta ishonchli yetkazib beruvchidan kerakli narsalarni olish imkoniyatini beradigan turli xil tibbiy sarf materiallarini taklif etamiz.",
     "12": "Tez va ishonchli yetkazib berish",
-    "13": "Medicare mahsulotlarni tezkor yetkazib berishni ta'minlaydi, kutish vaqtini qisqartiradi va muhim tibbiy sarf materiallarining doimiy mavjudligini ta'minlaydi.",
+    "13": "MCHJ 'Medicare' mahsulotlarni tezkor yetkazib berishni ta'minlaydi, kutish vaqtini qisqartiradi va muhim tibbiy sarf materiallarining doimiy mavjudligini ta'minlaydi.",
     "14": "Bizning sertifikatlarimiz"
   },
   "Payment" : {
