--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -22,7 +22,7 @@
     },
     "AboutVideo": {
       "0": "LLC 'Medicare' ",
-      "1": "LLC 'Medicare'  is a company created with the aim of providing medical institutions and healthcare professionals with reliable and high-quality consumables.\n\n Since our foundation in 2018, we have been striving to provide our customers with products that meet the highest quality standards.\n\n We are also currently considering the possibility of starting wholesale imports of adhesive bandages, expanding our product line to meet the growing needs of our customers for the highest quality medical products."
+      "1": "LLC 'Medicare' is a company established to provide medical institutions and healthcare professionals with reliable and high quality consumables.\n\n Since our establishment in 2018, we have been committed to providing our customers with products that meet the highest quality standards. Our philosophy is to constantly strive for improvement and innovation to ensure our customers' needs are maximized.\n\n Our main partner in this endeavor is PAKION MEDICAL. Partnering with such a leading manufacturer gives us access to cutting-edge technology and innovation in the medical field, ensuring that we can offer our customers the highest quality products on which they can fully rely."
     },
     "Xit": {
       "0": "Sales hits"
@@ -89,7 +89,7 @@
   },
   "About" : {
     "0": "Your reliable partner in healthcare",
-    "1": "At LLC 'Medicare' , we pride ourselves on providing high-quality medical products that are a reliable standard in the healthcare industry. With our rich experience and unique approach to quality, we strive to provide our customers with everything they need for effective and safe medical practice.The focus of our philosophy is the pursuit of innovation and continuous improvement. We are constantly researching new technologies and developments in order to offer our customers the most advanced and effective solutions. Our goal is not just to follow trends, but to set them, providing our customers with access to the most advanced products.",
+    "1": "We at LLC 'Medicare' take pride in providing high quality medical devices that have become a trusted standard in the healthcare industry. Our company has a wealth of experience and a unique approach to quality assurance, which enables us to successfully meet our clients' needs for safe and effective medical practices. We are constantly innovating and researching the latest technologies to provide cutting-edge solutions that shape the future of the industry.\n\n Our goal is not just to follow trends, but to create them. And our main partner in this endeavor is PAKION MEDICAL. Our close partnership with PAKION MEDICAL allows us to successfully integrate advanced development and technology into our products, giving our customers access to innovative solutions that meet the highest quality and safety standards in the medical industry.",
     "2": "We believe that everyone deserves the highest level of care and safety in the medical field. Our mission is to make medical practice more efficient, safe and accessible by offering a wide range of high-quality products and providing outstanding service.",
     "3": "We value our customers and strive to build long-term partnerships based on trust and mutual respect.",
     "4": "Strict quality control",
