--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -22,7 +22,9 @@
     },
     "AboutVideo": {
       "0": "OOO 'Medicare' ",
-      "1": "OOO 'Medicare'  - это компания, созданная с целью обеспечения медицинских учреждений и профессионалов здравоохранения надежными и высококачественными расходниками. \n\nС момента нашего основания в 2018 году мы стремимся к обеспечению наших клиентов продукцией, соответствующей самым высоким стандартам качества.\n\nВ настоящее время мы также рассматриваем возможность начать оптовый импорт клейких бинтов, расширяя нашу линейку продукции для удовлетворения растущих потребностей наших клиентов в медицинских товарах высочайшего качества."
+      "1": "OOO 'OOO 'Medicare' - это компания, созданная с целью обеспечения медицинских учреждений и профессионалов здравоохранения надежными и высококачественными расходниками.\n\n С момента нашего основания в 2018 году мы стремимся к обеспечению наших клиентов продукцией, соответствующей самым высоким стандартам качества. Наша философия — это постоянное стремление к улучшению и инновациям, чтобы обеспечить максимальное удовлетворение потребностей наших клиентов.\n\n Наш главный партнёр в этом стремлении — PAKION MEDICAL. Сотрудничество с таким ведущим производителем обеспечивает нам доступ к передовым технологиям и инновациям в медицинской сфере, гарантируя нам возможность предлагать клиентам продукцию высочайшего качества, на которую они могут полностью полагаться."
+
+      
     },
     "Xit": {
       "0": "Хиты продаж"
@@ -88,7 +90,7 @@
   },
   "About" : {
     "0" : "Ваш надёжный партнер в здравоохранении",
-    "1" : "Мы в OOO 'Medicare'  гордимся тем, что предоставляем высококачественные медицинские изделия, которые являются надежным стандартом в индустрии здравоохранения. С нашим богатым опытом и уникальным подходом к качеству, мы стремимся обеспечить наших клиентов всем необходимым для эффективной и безопасной медицинской практики.\n\nВ центре нашей философии лежит стремление к инновациям и постоянному совершенствованию. Мы постоянно исследуем новые технологии и разработки, чтобы предложить нашим клиентам самые передовые и эффективные решения. Наша цель - не просто следовать трендам, а задавать их, обеспечивая нашим клиентам доступ к самым передовым продуктам.",
+    "1" : "Мы в OOO 'Medicare' гордимся предоставлением высококачественных медицинских изделий, которые стали надежным стандартом в индустрии здравоохранения. Наша компания имеет богатый опыт и уникальный подход к обеспечению качества, что позволяет нам успешно удовлетворять потребности клиентов в безопасной и эффективной медицинской практике. Мы постоянно следим за инновациями и исследуем новейшие технологии, чтобы предложить передовые решения, которые определяют будущее отрасли.\n\n Наша цель - не просто следовать трендам, а создавать их. И наш главный партнёр в этом стремлении - PAKION MEDICAL. Наша тесная партнёрская связь с PAKION MEDICAL позволяет нам успешно внедрять передовые разработки и технологии в нашу продукцию, обеспечивая клиентам доступ к инновационным решениям, которые соответствуют самым высоким стандартам качества и безопасности в медицинской индустрии.",
     "2" : "Мы верим, что каждый заслуживает высочайшего уровня заботы и безопасности в медицинской сфере. Наша миссия - сделать медицинскую практику более эффективной, безопасной и доступной, предлагая широкий ассортимент продукции высокого качества и предоставляя выдающийся сервис.",
     "3" : "Мы ценим наших клиентов и стремимся к построению долгосрочных партнерских отношений на основе доверия и взаимного уважения.",
     "4" : "Строгий контроль качества",
